temporary overlap issue fix
eventually we’ll want the inverse color info to appear.

--- a/main.css
+++ b/main.css
@@ -53,7 +53,7 @@ html, body {
     /*top: 300px;*/
     width: 100%;
     height: 100%;
-    z-index: 3;
+    z-index: -1;
     transform-origin: top left;
     overflow: hidden;
 }
@@ -63,7 +63,7 @@ bizarro-liam > h1, bizarro-liam > h2 {
 }
 
 liam {
-    z-index: 1;
+    z-index: -2;
 }
 
 .counter-rotation-wrapper {
